添加图片资源

--- a/AssetPickerDemo/Podfile
+++ b/AssetPickerDemo/Podfile
@@ -4,5 +4,5 @@ use_frameworks!
 target 'AssetPicker' do
     
     #pod 'SnapKit'
-    #pod 'TAssetPicker', path: '../'
+    pod 'TAssetPicker', path: '../'
 end
